# simhash

./: CMakeLists.txt
include/simhash/: Simhasher.hpp
python/simhash/: __init__.py  _simhash.cpp
